Add test CourseMapper